@@ -3,8 +3,8 @@
 /*
 	Phoronix Test Suite
 	URLs: http://www.phoronix.com, http://www.phoronix-test-suite.com/
-	Copyright (C) 2010 - 2019, Phoronix Media
-	Copyright (C) 2010 - 2019, Michael Larabel
+	Copyright (C) 2010 - 2020, Phoronix Media
+	Copyright (C) 2010 - 2020, Michael Larabel
 
 	This program is free software; you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
@@ -877,6 +877,29 @@ class pts_test_installer
 							if($test_install_request->install_error != null)
 							{
 								self::test_install_error(null, $test_install_request, 'ERROR: ' . $test_install_request->install_error);
+								if(($e = strpos($install_error, 'cannot find -l')) !== false)
+								{
+									// Missing library
+									$lib_needed = substr($install_error, $e + strlen('cannot find -l'));
+
+									if($lib_needed)
+									{
+										foreach(array('lib' . $lib_needed . '.so', $lib_needed) as $file)
+										{
+
+											$lib_provided_by = pts_external_dependencies::packages_that_provide($file);
+											if($lib_provided_by)
+											{
+												if(is_array($lib_provided_by))
+												{
+													$lib_provided_by = array_shift($lib_provided_by);
+												}
+												self::test_install_error(null, $test_install_request, pts_client::cli_just_italic('Installing the package \'' . $lib_provided_by . '\' may fix this error.'));
+												break;
+											}
+										}
+									}
+								}
 							}
 						}
 						pts_client::$display->test_install_error('LOG: ' . str_replace(pts_core::user_home_directory(), '~/', $test_install_directory) . 'install-failed.log' . PHP_EOL);
